# baton-editor

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: autocompletedisplay.h  directory_tree.h  editor.h  file_view.h  mainwindow.h  suggest_label.h  syntax_highlighter.h  terminal.h
include/autocomplete/: client.h  enums.h  handler.h  interface.h  json_serializers.h  lsp_basic.h  lspuri.h
include/editor/: editor.h
include/interface/: directory_tree.h  mainwindow.h
src/: EditorWidget.pro  autocompletedisplay.cc  autocompletedisplay.ui  baton-editor.pro  config.txt  directory_tree.cc  directory_tree.ui  editor.cc  file_view.cc  main.cc  mainwindow.cc  syntax_highlighter.cc  syntax_highlighter.cpp  terminal.cc  terminal.cpp  terminal.ui
src/autocomplete/: client.cc  handler.cc  interface.cc  json_serializers.cc  lsp_basic.cc
